--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 <link rel="icon" href="static/img/favicon.ico">
-<title>Mediumish - A Medium style template by WowThemes.net</title>
+<title>MENJEANS</title>
 <!-- Bootstrap core CSS -->
 <link href="static/bootstrap.min.css" rel="stylesheet">
 <!-- Fonts -->
@@ -33,15 +33,9 @@
 		<!-- Begin Menu -->
 		<ul class="navbar-nav ml-auto">
 			<li class="nav-item active">
-			<a class="nav-link" href="http://localhost:8010/">Stories <span class="sr-only">(current)</span></a>
+			<a class="nav-link" href="http://localhost:8010/">Home <span class="sr-only">(current)</span></a>
 			</li>
 		<!-- End Menu -->
-		<!-- Begin Search -->
-		<form class="form-inline my-2 my-lg-0">
-			<input class="form-control mr-sm-2" type="text" placeholder="Search">
-			<span class="search-icon"><svg class="svgIcon-use" width="25" height="25" viewbox="0 0 25 25"><path d="M20.067 18.933l-4.157-4.157a6 6 0 1 0-.884.884l4.157 4.157a.624.624 0 1 0 .884-.884zM6.5 11c0-2.62 2.13-4.75 4.75-4.75S16 8.38 16 11s-2.13 4.75-4.75 4.75S6.5 13.62 6.5 11z"></path></svg></span>
-		</form>
-		<!-- End Search -->
 	</div>
 </div>
 </nav>
@@ -52,9 +46,9 @@
 ================================================== -->
 <div class="container">
 	<div class="mainheading">
-		<h1 class="sitetitle">MEJEANS</h1>
+		<h1 class="sitetitle">MENJEANS</h1>
 		<p class="lead">
-			Cуществует несколько десятков моделей джинсов в различных расцветках и исполнениях. Разобраться в них не всегда бывает просто. В этой статье мы расскажем о каждой модели джинсов и её особенностях.
+			Cуществует несколько десятков моделей мужских джинсов в различных расцветках и исполнениях. Разобраться в них не всегда бывает просто. В этой статье мы расскажем о каждой модели джинсов и её особенностях.
 		</p>
 	</div>
 <!-- End Site Title
@@ -64,48 +58,31 @@
 	================================================== -->
 	<section class="featured-posts">
 	<div class="section-title">
-		<h2><span>КАТЕГОРИИ</span></h2>
+		<h2><span>МОДЕЛИ</span></h2>
 	</div>
 	<div class="card-columns listfeaturedtag">
 
 		<!-- begin post -->
+		{{ range .JeansData }}
 		<div class="card">
 			<div class="row">
 				<div class="col-md-5 wrapthumbnail">
-					<a href="http://localhost:8010/menjeans">
-						<div class="thumbnail" style="background-image:url(static/jeans/loose-fit-tapered.png);">
+					<a href="http://localhost:8010/">
+						<div class="thumbnail" style="background-image:url('{{ .URL }}');">
 						</div>
 					</a>
 				</div>
 				<div class="col-md-7">
 					<div class="card-block">
-						<h2 class="card-title"><a href="http://localhost:8010/menjeans">Мужские джинсы</a></h2>
-						<h4 class="card-text">Все виды мужских джинсов по посадке, крою и фасону, прилеганию, низу штанины</h4>
+						<h2 class="card-title"><a href="http://localhost:8010/">{{ .NameRu }}</a></h2>
+						<h2 class="card-text">{{ .NameEng }}</h4>
+						<h4 class="card-text">{{ .Discription }}</h4>
 					</div>
 				</div>
 			</div>
 		</div>
+		{{ end }}
 		<!-- end post -->
-
-		<!-- begin post -->
-		<div class="card">
-			<div class="row">
-				<div class="col-md-5 wrapthumbnail">
-					<a href="http://localhost:8010/womenjeans">
-						<div class="thumbnail" style="background-image:url(static/jeans/Delias-Baggy-Denim-Jeans-Blue.jpeg);">
-						</div>
-					</a>
-				</div>
-				<div class="col-md-7">
-					<div class="card-block">
-						<h2 class="card-title"><a href="http://localhost:8010/womenjeans">Женские джинсы</a></h2>
-						<h4 class="card-text">Правильный выбор женских джинсов – это гарантия модного и стильного образа. Здесь мы собрали несколько секретов по выбору идеального фасона джинсов</h4>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!--end post -->
-
 	</div>
 	</section>
 	<!-- End Featured
@@ -115,10 +92,10 @@
 	================================================== -->
 	<div class="footer">
 		<p class="pull-left">
-			 Copyright &copy; 2017 Your Website Name
+			 Copyright &copy; 2024 MENJEANS
 		</p>
 		<p class="pull-right">
-			 Mediumish Theme by <a target="_blank" href="https://www.wowthemes.net">WowThemes.net</a>
+			 Create WebSite <a target="_blank" href="https://github.com/NikolasDeForce">NickDeForce</a>
 		</p>
 		<div class="clearfix">
 		</div>
