--- a/templates/index.html
+++ b/templates/index.html
@@ -50,6 +50,86 @@
 		<p class="lead">
 			Cуществует несколько десятков моделей мужских джинсов в различных расцветках и исполнениях. Разобраться в них не всегда бывает просто. В этой статье мы расскажем о каждой модели джинсов и её особенностях.
 		</p>
+		<div class="section-title">
+			<h2><span>ХАРАКТЕРИСТИКИ</span></h2>
+		</div>
+		<h2 id="posadka" class="ct-headline">
+			Посадка - Rise<br>
+		</h2>
+		<div id="div_block-23587-2630" class="ct-div-block">
+			<div id="text_block-22265-2417" class="ct-text-block">
+				<span id="span-18307-2817" class="ct-span">
+					<p>
+						<strong>Посадка джинсов</strong>
+						, 
+						<em>англ. rise</em>
+						 - это расстояние от верха пояса до шагового шва.
+						</p>
+			<p>
+				Различают 3 вида джинсов по посадке: с высокой - high rise jeans, средней - mid rise jeans, низкой - low rise jeans. Также выделяют джинсы с заниженным шаговым швом - low crotch jeans.
+			</p>
+			<p>
+				Почти все современные джинсы шьются с низкой и средней посадкой, высокая - это скорее экзотика.
+			</p>
+			</span>
+		</div>
+		<h2 id="cut" class="ct-headline">
+			Крой низа штанин - Cut
+		</h2>
+		<div id="div_block-23722-2630" class="ct-div-block">
+			<div id="text_block-23723-2630" class="ct-text-block">
+				<span id="span-23724-2817" class="ct-span">
+					<p>
+						Крой штанины в области голени - по английски называется cut, или по другому - leg opening. Способ кроя низа штанин джинсов определяет их ширину, форму и длину.
+					</p>
+					<p>
+					Формы низа штанин джинсов: клеш - 
+					<em>bell bottom</em>
+					или 
+					<em>flared</em>
+					, под ботинок - 
+					<em>boot cut</em>
+					, прямая - 
+					<em>straight cut</em>
+					, полузауженная - 
+					<em>semi tapered cut</em>
+					, зауженная - 
+					<em>tapered cut</em>
+					.
+					</p>
+					<p>
+					<span style="color: #938564; font-size: 22px;">ℹ</span>
+					Часто возникает путаница из-за того, что одни и те же названия могут относиться и к 
+					<em>cut</em>
+					'у - крою штанин, и к джинсам в целом! Например - 
+					<em>tapered cut</em>
+					- это сужение от колена до низа штанины, а 
+					<em>tapered fit</em>
+					- это сужение книзу всего силуэта джинсов, то есть штанины полностью в таком стиле - сужаются от самого верха к низу. Характеристику силуэта джинсов в целом - 
+					<em>fit</em>
+					, разберем ниже.
+					</p>
+				</span>
+			</div>
+		</div>
+		<h2 id="fit" class="ct-headline">
+			Силуэт - Fit
+			<br>
+		</h2>
+		<div id="div_block-24319-2630" class="ct-div-block">
+			<div id="text_block-24320-2630" class="ct-text-block">
+				<span id="span-24321-2817" class="ct-span">
+					<p>
+						<strong>Силуэт джинсов</strong>
+						, 
+						<em>jeans fit</em>
+						 - это общая характеристика силуэта кроя джинсов в целом. 
+						<em>Fit</em>
+						  определяет форму джинсов - например, свободные они, сужаются книзу или облегающие.
+					</p>
+				</span>
+			</div>
+		</div>
 	</div>
 <!-- End Site Title
 ================================================== -->
@@ -75,8 +155,8 @@
 				<div class="col-md-7">
 					<div class="card-block">
 						<h2 class="card-title"><a href="http://localhost:8010/">{{ .NameRu }}</a></h2>
-						<h2 class="card-text">{{ .NameEng }}</h4>
-						<h4 class="card-text">{{ .Discription }}</h4>
+						<h2 class="card-text">{{ .NameEng }}</h2>
+						<h3 class="card-text">{{ .Discription }}</h3>
 					</div>
 				</div>
 			</div>
