--- a/templates/womenjeans.html
+++ b/templates/womenjeans.html
@@ -81,6 +81,13 @@
 			</p>
 			</span>
 		</div>
+        <div class="article-image-item__container">
+			<div class="article-image-item__background" style="background-image:url(https://avatars.dzeninfra.ru/get-zen_doc/1389531/pub_5f1fd3629f84405845489a20_5f21488f4896484373c41002/blurred_60);background-color:#fff">
+			</div>
+			<figure itemscope="" itemprop="image" itemtype="http://schema.org/ImageObject" class="article-image-item__image-item">
+				<img itemprop="image" class="article-image-item__image" width="620px" height="275px" src="https://avatars.dzeninfra.ru/get-zen_doc/1389531/pub_5f1fd3629f84405845489a20_5f21488f4896484373c41002/scale_1200">
+			</figure>
+		</div>
 		<h2 id="cut" class="ct-headline">
 			Крой низа штанин - Cut
 		</h2>
